--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -155,6 +155,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [Flash-cov on overlapping groups](flash_cov_overlapping_groups.html)
 * [A look at estimates of the latent factors on trees](tree_ebcd.html)
 * [Outline of a method for building trees topdown using flash](flash_tree.html)
+* [Some results for trees and overlapping groups, initializing using point-laplace](flashier_point_laplace_initialization.html)
 
 # EBNM
 * [A bimodal mixture of 2 normals ebnm function](ebnm_binormal.html)
