--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -94,6 +94,10 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [A power method for fitting symmetric NMF](power_nneg.html)
 * [An EB version of the power method for symmetric NMF](ebpower.html)
 
+# ICA
+
+* [Initial try of fastICA on simulated data](fastica_01.html)
+
 # Multinomial factor models
 
 * [Possible version of structure/admixture with sparsity via ARD-like prior](sparse_structure.html)
